<resources>
    <string name="app_name">AnimalBank</string>
    <string name="animal_name">Animal Name</string>
    <string name="spotted_date">Spotted on:</string>
    <string name="spotted_location">Spotted near:</string>
    <string name="wiki_text">Info from wikipedia:</string>
    <string name="user_notes">My Notes:</string>
    <string name="location_placeholder">Location placeholder</string>
    <string name="date_placeholder">Date placeholder</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="capture">Capture</string>
    <string name="input_animal_name" translatable="false">Animal name:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>